  - made plugin-names case-insensitive. this affects compiler/block/custom-
    functions and modifers. (messju)
  - remove unnecessary close/open tags from compiled templates
    (Monte)
  - fixed errornous creation of '//' in image_path in html_image (messju)
  - fix escapement of special chars for key vals in debug
    console (Monte)
  - fixed debug timing logic for config_load (Tom Sommer, Monte)
  - all in-code doc comments converted to phpDocumentor format (Greg)
  - moved strip from smarty core to plugin (Monte)
  - moved config_load from smarty core to plugin (Monte)
  - added &$repeat-paramter to block-functions (messju)
  - enabled hex-constants in function.math.php (messju)
  - enabled hex-constants (0x...) as function-attributes, inside if-statements
    and as modifier-parameters (messju)
  - fixed bug with passing $smarty as reference in Smarty.compiler.class
    (messju)
  - corrected output with {strip} and PHP tag newlines (Monte)
  - added possibility to register function-callbacks as "array(&$obj, 'method)"
    this affects register_function(), -block, -compiler_function, -modifier, 
    -prefilter, -postfilter, -outputfilter-functions() and $cache_handler_func
    (messju)
  - added <labels> to html_checkboxes and html_radios (Philippe, messju)
  - added "labels"-options to turn off labels in html_checkboxes and _radios
    (messju)

Version 2.5.0 (April 11, 2003)
------------------------------

   - fixed bug with default modifier when passing integer 0
     (Monte)
   - change backtic syntax from $`foo` to `$foo` (Monte)
   - recognize $foo[][] syntax inside embedded quotes without
     backtics (Monte)
   - name=123 is passed as an integer (not a string) to plugins now (messju)
   - $length is now propagated to sub-values in debug_print_var (messju) 

Version 2.5.0-RC2 (March 26, 2003)
----------------------------------

    - made clear_cache() ignore compile_id, when clearing cache-groups (this